# Homework_web_2

./: Dockerfile  README.md  pyproject.toml
assistant_bot/: cleaner.py
assistant_bot.egg-info/: SOURCES.txt  top_level.txt
